# FrameForge

./: .gitignore  README  README.md  build-and-release.bat  package.json
.claude/: settings.json  settings.local.json
src/: App.css  App.tsx  Foundry.tsx  ItemReport.css  ItemReport.tsx  MarketHelper.tsx  RelicHelper.tsx  Reports.css  Reports.tsx  RivenAnalyzer.css  RivenAnalyzer.tsx  RivenOverlayWindow.css  RivenOverlayWindow.tsx  Statistics.tsx  TimerHelper.css  TimerHelper.tsx  WfmTrading.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  memory_scanner.rs  ocr.rs  wfcd.rs
